security: fix privilege escalation, JWT secret, DataLoader dev-only, webhook signature, CORS from env, actuator restricted, cupones auth